# plotting

./: .gitignore  ChangeLog.md  LICENSE  README.md  default.nix  plotting.cabal
gnuplot/: density.gp  simple.gp
haskell/Plotting/: Density.hs  Plotter.hs
src/: density.gp  weightedDensity.gp
