name:                plotting
version:             0.0.1.0
-- synopsis:
description:         command line plotting tools
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable plotter
  main-is:             Plotting/Plotter.hs
  build-depends:       base                 >= 4.9 && <4.10,
                       gnuplot              >= 0.5,
                       optparse-applicative >= 0.11,
                       logfloat             >= 0.1
  hs-source-dirs:      haskell
  default-language:    Haskell2010

library
  exposed-modules:     Plotting.Density

  build-depends:       base     >= 4.9 && <4.10,
                       gnuplot  >= 0.5,
                       logfloat >= 0.1

  hs-source-dirs:      haskell
  default-language:    Haskell2010
